--- a/_extensions/nbis-course-logo/revealjs.scss
+++ b/_extensions/nbis-course-logo/revealjs.scss
@@ -7,17 +7,19 @@
 /*-- scss:defaults --*/
 $presentation-slide-text-align: left !default;
 
-/*-- scss:variables --*/
+// /*-- scss:variables --*/
 /* presentation */
-$presentation-font-size-root: 28px;
-$presentation-line-height: 1.3;
-$presentation-h1-font-size: 1.802em;
-$presentation-h2-font-size: 1.602em;
-$presentation-h3-font-size: 1.424em;
-$presentation-h4-font-size: 1.266em;
-$presentation-h5-font-size: 1.125em;
-$presentation-h6-font-size: 1em;
-$code-block-font-size: 0.95em;
+$presentation-font-size-root: 28px !default;
+$presentation-font-smaller: 0.7 !default;
+$presentation-line-height: 1.3 !default;
+
+// headings
+$presentation-h1-font-size: 1.802em !default;
+$presentation-h2-font-size: 1.602em !default;
+$presentation-h3-font-size: 1.424em !default;
+$presentation-h4-font-size: 1.266em !default;
+$presentation-h5-font-size: 1.125em !default;
+$presentation-h6-font-size: 1em !default;
 
 /*-- scss:mixins --*/
 .reveal .slides section[data-vertical-align-top] {
@@ -58,43 +60,15 @@ $code-block-font-size: 0.95em;
   border-top: lightgray 2px solid;
 }
 
-.reveal pre {
-  font-size: 0.92em;
-  line-height: 1.3;
+.reveal .ultitle > h1,
+.reveal .ultitle > h2,
+.reveal .ultitle > h3 {
+    text-decoration: underline;
+    text-decoration-color: cl.$lime;
+    text-underline-offset: 0.3em;
+    width: 100%;
+    display: inline-block;
 }
-
-.reveal pre code {
-  background-color: #f5f5f5 !important;
-  border-radius: 6px;
-}
-
-.reveal code {
-  font-size: 0.9em;
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-.reveal div.sourceCode {
-  border: 0 !important;
-  border-radius: 6px;
-  margin-bottom: 0.6em !important;
-}
-
-.reveal .sourceCode span.in {
-  background-color: $code-block-bg;
-}
-
-// .reveal .callout.callout-captioned .callout-icon::before {
-//   margin-top: 0.5rem;
-//   scale: 0.8;
-// }
-
-// .callout-answer > .callout-header::before {
-//   font-family: "Font Awesome 5 Free";
-//   content: "\f002 ";
-//   font-weight: 900;
-//   margin-right: 10px;
-// }
 
 
 /* sizes */
