--- a/_extensions/nbis-course-logo/templates/_nbis.scss
+++ b/_extensions/nbis-course-logo/templates/_nbis.scss
@@ -1,41 +1,37 @@
 /*-- scss:uses --*/
 @use 'colors' as cl;
-@use 'callout' as co;
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Nunito:ital,wght@0,400;0,600;1,400;1,600&display=swap");
 
 
 /*-- scss:defaults --*/
 // Description: NBIS theme
-$primary: cl.$lime;
-$secondary: cl.$lime75;
-$link-color: cl.$teal50;
-$body-color: cl.$black;
-$code-block-bg: WhiteSmoke;
+$primary: cl.$lime !default;
+$secondary: cl.$lime75 !default;
+$link-color: cl.$teal50 !default;
+$body-color: cl.$black !default;
+$code-block-bg: white !default;
 
-$font-family-sans-serif: "Nunito", "Source Sans Pro", "Helvetica", "sans-serif";
+$font-family-sans-serif: "Nunito", "Source Sans Pro", "Helvetica", "sans-serif" !default;
 $font-family-monospace: "JetBrains Mono", "Ubuntu Mono", "Lucida Console",
-			"Courier", "monospace";
+			"Courier", "monospace" !default;
 
-
-$code-block-border-color: none !default;
-$code-bg: $code-block-bg; /* inline code */
 
 /*-- scss:variables --*/
-$font-size-root: 18px;
-$code-font-size: 14px;
+$font-size-root: 18px !default;
+$code-font-size: 14px !default;
 /* major second scale */
-$h1-font-size: 1.802rem;
-$h2-font-size: 1.602rem;
-$h3-font-size: 1.424rem;
-$h4-font-size: 1.266rem;
-$h5-font-size: 1.125rem;
-$h6-font-size: 1rem;
-$code-block-font-size: 0.95rem;
+$h1-font-size: 1.802rem !default;
+$h2-font-size: 1.602rem !default;
+$h3-font-size: 1.424rem !default;
+$h4-font-size: 1.266rem !default;
+$h5-font-size: 1.125rem !default;
+$h6-font-size: 1rem !default;
+$code-block-font-size: 0.95rem !default;
 
 /* site */
-$navbar-bg: white;
-$footer-bg: white;
-$footer-fg: DimGray;
+$navbar-bg: white !default;
+$footer-bg: white !default;
+$footer-fg: DimGray !default;
 
 /*-- scss:rules --*/
 :root {
@@ -56,21 +52,12 @@ $footer-fg: DimGray;
 pre.out {
   background-color: cl.$lime;
 }
-pre.sourceCode.src {
-  background-color: cl.$teal25;
-}
 
 .label {
   color: cl.$lime;
   font-weight: bold;
   background-color: white;
   font-size: 1em;
-}
-
-code {
-  color: cl.$grape;
-  font-weight: bold;
-  background-color: white;
 }
 
 code.tree {
